# ml-idealista-18

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
notebooks/: 01a - EDA - Basico.ipynb  01b - EDA - Por zonas.ipynb  example-idealista18-original.ipynb  example-idealista18.madrid.ipynb  ml_idealista18_analyze_residuals.html  ml_idealista18_analyze_residuals.ipynb  ml_idealista18_madrid_GAM.ipynb  ml_idealista18_madrid_ml.ipynb  ml_idealista18_madrid_ml_price.ipynb
notebooks/descriptivos/: correlaciones_precio.csv  estadisticas_numericas.csv  impacto_caracteristicas_binarias.csv  info_basica.txt  resumen_exploratorio.txt  valores_faltantes.csv
notebooks/descriptivos/zonas/: comparacion_mayor_menor_variabilidad.csv
notebooks/raking/: raking.html  raking.ipynb
src/idealista18/: __init__.py  enricher.py  loader.py  util.py
