[project]
name = "ml-idealista-18"
version = "0.1.0"
description = "Proyecto de de modelización sobre idealista 18"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "notebook",
    "pandas",
    "ipykernel",
    "geopandas",
    "matplotlib",
    "wandb==0.19.11",
    "unidecode",
    "dotenv",
    "shapely>=2.0",  # Shapely 2.x incluye todo lo que antes venía en pygeos
    "rtree",
    "scikit-learn",
    # add your other runtime dependencies here
]

[tool.uv]
# uv-specific settings, optional

