[project]
name = "ml-idealista-18"
version = "0.1.0"
description = "Proyecto de de modelización sobre idealista 18"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "notebook",
    "pandas",
    "ipykernel",
    "geopandas",
    "matplotlib",
    "wandb==0.19.11",
    "unidecode",
    "dotenv",
    "shapely>=2.0", # Shapely 2.x incluye todo lo que antes venía en pygeos
    "rtree",
    "scikit-learn",
    # add your other runtime dependencies here
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "pygam>=0.12.0",
    "libpysal>=4.14.1",
    "esda>=2.8.1",
]

[tool.uv]
# uv-specific settings, optional

